<resources>
    <string name="app_name">*App Name Goes Here*</string>
    <string name="unlock_bike">Unlock Bike</string>
    <string name="result_text_default">Please focus camera to QR code</string>

    <!-- Homepage Card Titles -->
    <string name="card_money">Money Saved</string>
    <string name="card_environment">Trees Planted</string>
    <string name="card_fitness">Distance Travelled</string>

    <!-- Navigation Buttons -->
    <string name="nav_money">Money</string>
    <string name="nav_env">Environment</string>
    <string name="nav_fitness">Fitness</string>
    <string name="title_activity_fitness">Fitness</string>

    <!-- Fitness Activity -->
    <string name="distance_travelled_title">Distance Travelled</string>
    <string name="distance_travelled_value">98 miles</string>
    <string name="time_travelled_title">Total Travel Time</string>
    <string name="time_travelled_value">12.5 hours</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="calories_burned_value">1567</string>
    <string name="back_button">Back</string>

    <!-- Money Activity -->
    <string name="today_savings_title">Today\'s Savings</string>
    <string name="today_savings_value">12.34</string>
    <string name="month_savings_title">This Month\'s Savings</string>
    <string name="month_savings_value">123.45</string>
    <string name="total_savings_title">Overall Savings</string>
    <string name="total_savings_value">1234.56</string>
    <string name="pound_sign">£</string>
    <string name="title_activity_money">Money</string>
    <string name="compare_overall">All Transport</string>
    <string name="compare_bus">Compared to Bus</string>
    <string name="compare_uber">Compared to Uber</string>
    <string name="switch_right">&gt;&gt;</string>
    <string name="switch_left">&lt;&lt;</string>
    <string name="today_savings_bus">6.34</string>
    <string name="month_savings_bus">60.45</string>
    <string name="total_savings_bus">600.56</string>
    <string name="today_savings_uber">6.00</string>
    <string name="month_savings_uber">63.00</string>
    <string name="total_savings_uber">634.00</string>
    <string name="target">Target</string>
    <string name="daily_target">£15</string>
    <string name="monthly_target">£200</string>
    <string name="overall_target">£5000</string>
    <string name="title_activity_manual_code_enter">ManualCodeEnter</string>

    <string name="trees_planted_today">Trees Planted Today</string>
    <string name="trees_planted_today_value">0.9</string>
    <string name="trees_planted_month_value">75</string>
    <string name="emissions">2 tCO2e</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
